--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#" class="random-btn" onclick="randomColor()"><i class="fas fa-random"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="info-btn"><i class="fas fa-info-circle"></i></a>
+                    <a href="#" class="info-btn" onclick="infoHsl()"><i class="fas fa-info-circle"></i></a>
                 </li>
                 <li>
                     <a href="#" class="copy-btn" onclick="copyColor()"><i class="far fa-copy"></i></a>
@@ -37,11 +37,13 @@
             </div>
             <div class="s-div">
                 <p>S</p>
-                <input type="text" name="s-value" id="s-value" placeholder="0%" />
+                <input type="text" name="s-value" id="s-value" placeholder="0" />
+                %
             </div>
             <div class="l-div">
                 <p>L</p>
-                <input type="text" name="l-value" id="l-value" placeholder="90%" />
+                <input type="text" name="l-value" id="l-value" placeholder="90" />
+                %
             </div>
         </main>
         <script src="/script.js"></script>
