--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         <header>
             <ul>
                 <li>
-                    <a href="#" class="random-btn" onclick="randomColor()"><i class="fas fa-random"></i></a>
+                    <a href="#" class="random-btn"><i class="fas fa-random"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="info-btn" onclick="infoHsl()"><i class="fas fa-info-circle"></i></a>
+                    <a href="#" class="info-btn"><i class="fas fa-info-circle"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="copy-btn" onclick="copyColor()"><i class="far fa-copy"></i></a>
+                    <a href="#" class="copy-btn"><i class="far fa-copy"></i></a>
                 </li>
             </ul>
         </header>
         <main>
             <div class="h-div">
                 <p>H</p>
-                <input type="text" name="h-value" id="h-value" placeholder="0" />
+                <input type="number" name="h-value" id="h-value" placeholder="0" />
             </div>
             <div class="s-div">
                 <p>S</p>
-                <input type="text" name="s-value" id="s-value" placeholder="0" />
-                %
+                <input type="number" name="s-value" id="s-value" placeholder="0" />
+                <p>%</p>
             </div>
             <div class="l-div">
                 <p>L</p>
-                <input type="text" name="l-value" id="l-value" placeholder="90" />
-                %
+                <input type="number" name="l-value" id="l-value" placeholder="90" />
+                <p>%</p>
             </div>
         </main>
         <script src="/script.js"></script>
