Added link for the info button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#" class="random-btn"><i class="fas fa-random"></i></a>
                 </li>
                 <li>
-                    <a href="#" class="info-btn"><i class="fas fa-info-circle"></i></a>
+                    <a href="https://en.wikipedia.org/wiki/HSL_and_HSV" target="_blank" class="info-btn"><i class="fas fa-info-circle"></i></a>
                 </li>
                 <li>
                     <a href="#" class="copy-btn"><i class="far fa-copy"></i></a>
