Added a few comments for better understanding

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </ul>
         </header>
         <main>
+            <!-- H div, which has the first third of the screen and corresponds to the HUE -->
             <div class="h-div">
                 <p>H</p>
                 <div class="percentage">
@@ -38,6 +39,7 @@
                     <p class="small-percentage">deg</p>
                 </div>
             </div>
+            <!-- S div, which has the second third of the screen and corresponds to the Saturation -->
             <div class="s-div">
                 <p>S</p>
                 <div class="percentage">
@@ -45,6 +47,7 @@
                     <p class="small-percentage">%</p>
                 </div>
             </div>
+            <!-- L div, which has the last third of the screen and corresponds to the Lightness -->
             <div class="l-div">
                 <p>L</p>
                 <div class="percentage">
