--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     <a href="#" class="random-btn"><i class="fas fa-random"></i></a>
                 </li>
                 <li>
-                    <a href="https://en.wikipedia.org/wiki/HSL_and_HSV" target="_blank" class="info-btn"><i class="fas fa-info-circle"></i></a>
+                    <a href="https://en.wikipedia.org/wiki/HSL_and_HSV" target="_blank" class="info-btn"
+                        ><i class="fas fa-info-circle"></i
+                    ></a>
                 </li>
                 <li>
                     <a href="#" class="copy-btn"><i class="far fa-copy"></i></a>
@@ -31,7 +33,6 @@
             </ul>
         </header>
         <main>
-            <!-- H div, which has the first third of the screen and corresponds to the HUE -->
             <div class="h-div">
                 <p>H</p>
                 <div class="percentage">
@@ -39,7 +40,6 @@
                     <p class="small-percentage">deg</p>
                 </div>
             </div>
-            <!-- S div, which has the second third of the screen and corresponds to the Saturation -->
             <div class="s-div">
                 <p>S</p>
                 <div class="percentage">
@@ -47,7 +47,6 @@
                     <p class="small-percentage">%</p>
                 </div>
             </div>
-            <!-- L div, which has the last third of the screen and corresponds to the Lightness -->
             <div class="l-div">
                 <p>L</p>
                 <div class="percentage">
